fix: align shop titles

--- a/src/pages/shop/styles.css
+++ b/src/pages/shop/styles.css
@@ -35,13 +35,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
   min-height: 500px;
 }
 
 .search-input {
+  all: unset;
+  border: 1px solid #f6f600;
   width: 100%;
   max-width: 300px;
   padding: 10px;
@@ -49,6 +50,8 @@
   font-size: 1.125rem;
   font-weight: 500;
   font-family: mortalkombat;
+  color: #f6f600;
+  background-color: #000;
 }
 
 .characters-to-buy {
@@ -66,8 +69,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  min-height: 500px;
 }
 
 .characters-to-vote {
@@ -109,6 +112,10 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
+
+  p {
+    font-size: 1.25rem;
+  }
 }
 
 .shop-item > img {
